# filterax

./: .env.example  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json
.github/: copilot-instructions.md
.github/instructions/: docs-examples.instructions.md
.github/workflows/: typecheck.yml
api/primitives/: index.html
api/reference/: index.html
contributing/: index.html
design_docs/: index.html
design_docs/api/: index.html
design_docs/api/components/: index.html
design_docs/api/models/: index.html
design_docs/api/primitives/: index.html
design_docs/architecture/: index.html
design_docs/boundaries/: index.html
design_docs/decisions/: index.html
design_docs/examples/: index.html
design_docs/examples/components/: index.html
design_docs/examples/integration/: index.html
design_docs/examples/models/: index.html
design_docs/examples/primitives/: index.html
design_docs/features/diagnostics/: index.html
design_docs/features/differentiable_da/: index.html
design_docs/features/filters/: index.html
design_docs/features/localization_inflation/: index.html
design_docs/features/optax_ekp/: index.html
design_docs/features/processes/: index.html
design_docs/features/smoothers/: index.html
design_docs/issues/: index.html
design_docs/issues/wave-0-scaffold/: index.html
design_docs/issues/wave-1-core-foundations/: index.html
design_docs/issues/wave-2-sequential-filtering-foundation/: index.html
design_docs/issues/wave-3-processes-and-optax/: index.html
design_docs/issues/wave-4-advanced-filtering-and-diagnostics/: index.html
design_docs/issues/wave-5-smoothers-differentiable-integrations/: index.html
design_docs/issues/wave-6-examples-and-playbooks/: index.html
design_docs/research/: index.html
design_docs/research/ens_kalman_process/: index.html
design_docs/research/research_enskf/: index.html
design_docs/vision/: index.html
docs/: index.md
docs/api/: primitives.md  reference.md
docs/design_docs/: README.md  architecture.md  boundaries.md  decisions.md  vision.md
docs/design_docs/api/: README.md  components.md  models.md  primitives.md
docs/design_docs/examples/: README.md  components.md  integration.md  models.md  primitives.md
docs/design_docs/features/: diagnostics.md  differentiable_da.md  filters.md  localization_inflation.md  optax_ekp.md  processes.md  smoothers.md
docs/design_docs/issues/: README.md  wave-0-scaffold.md  wave-1-core-foundations.md  wave-2-sequential-filtering-foundation.md  wave-3-processes-and-optax.md  wave-4-advanced-filtering-and-diagnostics.md  wave-5-smoothers-differentiable-integrations.md  wave-6-examples-and-playbooks.md
docs/design_docs/research/: README.md  ens_kalman_process.md  research_enskf.md
docs/notebooks/: example_demo.ipynb
search/: search_index.json
src/filterax/: __init__.py
src/filterax/_src/: _types.py  (+6 more)
tests/: conftest.py  test_filterax.py  test_gain.py  test_jax_transforms.py  test_likelihood.py  test_protocols.py  test_statistics.py  test_types.py
(+5 files in other folders)
