[project]
name = "filterax"
version = "0.0.0"
description = "Differentiable ensemble Kalman filters, smoothers, and processes for JAX."
authors = [
    {name="J. Emmanuel Johnson", email="jemanjohnson34@gmail.com"},
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = [
    "data-assimilation",
    "ensemble-kalman-filter",
    "ensemble-kalman-inversion",
    "jax",
    "kalman-filter",
]
requires-python = ">=3.12"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "einops>=0.8",
    "equinox>=0.11",
    "gaussx @ git+https://github.com/jejjohnson/gaussx@fd9a242730e32caeebcc7e5bd3441bf80e0d053f",
    "jax>=0.4",
    "jaxlib>=0.4",
    "jaxtyping>=0.2",
    "lineax>=0.0.5",
    "optax>=0.2",
]

[project.urls]
Repository = "https://github.com/jejjohnson/filterax"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.5.1",
]
lint = [
    "ruff>=0.15.10",
]
typecheck = [
    "ty>=0.0.30",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "mkdocs-jupyter>=0.26.2",
    "jupytext>=1.19.1",
    "ipykernel>=7.2.0",
    # matplotlib + watermark used by the example notebooks during local
    # re-execution. The guarded watermark cell in each notebook no-ops
    # if the package is missing, but installing it here lets the version
    # readout actually print under `nbconvert --execute`.
    "matplotlib>=3.8",
    "watermark>=2.4",
    # pygments 2.20.0 dropped the None -> '' coercion for HtmlFormatter(filename=...),
    # but pymdownx.highlight 10.21.x still passes the untitled-code-block title
    # through as None. Pin until a fixed pymdown-extensions release ships (#38).
    "pygments>=2.19,<2.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# gaussx is not yet on PyPI; resolve from GitHub until the first release.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/filterax"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# F722 is ignored globally so jaxtyping shape strings (e.g. Float[Array, "N_x N_y"])
# do not trigger "syntax error in forward annotation".
ignore = ["E402", "E721", "E731", "E741", "F722"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/filterax --cov-report=term-missing --cov-report=xml:coverage.xml"

[tool.coverage.run]
source = ["src/filterax"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
